--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
 html {
   box-sizing: border-box;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit
 }
 
+h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
 a:hover {
   text-decoration: none;
